package Orders;

public class Dish {
    private String name;
    private String description;
    private String estimatedTime;
    private int price;
    private boolean finished;


    // Methods
    public void MarkAsFinished() {
    }
}
