package Orders;

public class EatingIn extends Order{
    private int tableNumber;

    // Methods
    public void MarkAsServed() {
    }
}
