package Orders;

import Person.DeliveryDriver;

public class Express extends Order{
    private String deliveryAdress;
    private String estiamtedDeliveryTime;
    public DeliveryDriver deliveryDriver;

}
