package Orders;

public class Menu {
    private Dish[] Catalog;

    // Methods
    public void AddDish() {
    }
    public void RemoveDish() {
    }
}
