package Orders;

public class Order {
    private int orderNumber;
    private String initialTime;
    private int totalPrice;
    private String registrationDate;
    private String status;
    // private Custumer custumer;
    // private Dish[] dishes;

    // Methods
    public int calculateTotalPrice() {
        return 0;
    }
    public String calculateTotalTime() {
        return "";
    }
    public void MarkAsCompleted() {
    }
    public void MarkAsDelivered() {
    }
}
