package Orders;

public class ToGo extends Order{
    private String pickUpTime;
    private String pickUpDate;

    // Methods
    public void MarkAsPickedUp() {
    }

    public void MarkAsReady() {
    }
}
