package Person;

public class DeliveryDriver {
    public Vehicle vehicle;

    // Methods

    public void assignOrder(){
        System.out.println("Assigning order");
    }
}
