package Person;

public class Employee {
    private int employeeId;
    private String boss;
    private int salary;

    //Methods
    public void takeOrder(){
        System.out.println("Taking order");
    }
}
