package Person;

public class Person {
    private String name;
    private String gender;
    private int age;
    private int id;
    private int cellphoneNumber;

}
