package Person;

public class Vehicle {
    private String plateNumber;
    private String type;
}
